PR30459: removed an unused large C array allocated on the kernel stack